Version=1.2.1016
 - Mysql: Geraetegruppe wird mit abgespeichert
 - css-File fuer eigene Webfrontgestaltung
 - Changelog-Anzeige in der Versionsanzeige
 - Mysql: Logadresse mit in Tabelle Gesamt