@@ -1,4 +1,4 @@
-Version=1.2.1016
+Version=1.2.1017
 ModuleNamespace=IPSLibrary::app::hardware::Plugwise
 
 [App]
