@@ -127,7 +127,18 @@
   // Timer fuer Plugwise_Recalibrate
   //****************************************************************************  
   $ScriptId = IPS_GetScriptIDByName('Plugwise_Recalibrate', $CategoryIdApp );
-  $id = CreateTimer_OnceADay ("REFRESH",$ScriptId,3,0);
+  $id = CreateTimer_OnceADay ("REFRESH",$ScriptId,intval(CALIBRATION_TIME),15);
+
+  //****************************************************************************
+  // Timer fuer Plugwise_CheckUpdate
+  //****************************************************************************  
+  if ( defined('CHECK_VERSION') and defined('CHECK_VERSION_TIME') )                                           
+    if (CHECK_VERSION != FALSE )
+      {
+      $ScriptId = IPS_GetScriptIDByName('Plugwise_CheckUpdate', $CategoryIdApp );
+      $id = CreateTimer_OnceADay ("REFRESH",$ScriptId,intval(CHECK_VERSION_TIME),15);
+      }
+
 
   
   //****************************************************************************
@@ -318,7 +329,11 @@
   if ( defined('ALT_BUTTON_NORMAL') )
     if (ALT_BUTTON_NORMAL!= FALSE )
       {
-      $WFC_TabPaneName = "<img src='".ALT_BUTTON_NORMAL."' height=32  width=150 align='top' alt='Plugwise'>";
+      $normal_file  = IPS_GetKernelDir() ."webfront\\user\\Plugwise\\".ALT_BUTTON_NORMAL;
+      $dest_file    = IPS_GetKernelDir() ."webfront\\user\\Plugwise\\tabPane.png";
+      copy ( $normal_file,$dest_file);
+      $tabbutton  = "user/Plugwise/tabPane.png";
+      $WFC_TabPaneName = "<img src='".$tabbutton."' height=32  width=150 align='top' alt='".$WFC_TabPaneName."'>";
 
       }
   
@@ -391,6 +406,8 @@
     $id = CreateVariable("OnlineUpdate", 1, $VisuID_data2, 10, "Plugwise_MenuScripte", $ActionScriptId, false);
     IPS_SetInfo($id,"Script");
     $id = CreateVariable("Versionsinfo", 1, $VisuID_data2, 20, "Plugwise_MenuScripte", $ActionScriptId, false);
+    IPS_SetInfo($id,"Script");
+    $id = CreateVariable("Update vorhanden?", 1, $VisuID_data2, 20, "Plugwise_MenuScripte", $ActionScriptId, false);
     IPS_SetInfo($id,"Script");
     
 
